feat: CORS 에러 처리 주소 추가 (#5)